Making clippy positioned correctly on different sized screens

--- a/src/css/story/clippy.styl
+++ b/src/css/story/clippy.styl
@@ -7,7 +7,7 @@
 
   &-character
     position absolute
-    bottom -3%
+    bottom -40px
     right 5%
     transform scale(2)
 
